css/styles.css
/* Global Layout Set-up */
* { 
  box-sizing: border-box;
}


body {
margin: 0;
display: flex;
flex-direction: column;

}


header {
background-color: black;
width: 100%;
margin: 0;
padding: 0;
/* position: fixed;  Caused body to collapse into header */
}

main {
padding-top: 7px;
padding-left: 5%;
padding-right: 5%;

}

/* Links */

a:hover {
color: green;
}

a:visited {
  color: orange;
}

/* Classes */

/* .main {
padding-top: 83px;

} */

.img {
  height: auto; 
  width: auto; 
  max-width: 400px; 
  max-height: 400px;
  border: 12px solid black;
  border-radius: 30px;
  float: right;
  flex-shrink: .5%;
}


.nav {
  font-weight: 500;
  list-style-type: none;
  margin: 0 auto;
  padding: 20px;
  text-align: center;

}

.nav li {
  padding: 5px 10px 10px 10px;
  border: 5px solid hotpink;
  border-radius: 25px;
  flex-grow: 1;
}

.paragraphs {
text-indent: 5%;
}


.col {
display: flex;
}



/* Media Queries  */


@media (min-width: 795px){
  /* 795px or larger */
.nav {
  display: flex;
  flex-wrap: column;
  justify-content: space-evenly;
}

/* main {

  padding-top: 384px;
} */
.col {
  display: flex 50%;
  flex-direction: column;
  flex-wrap: wrap;
  }

}


@media (min-width: 1025px){
  /* 1025 px or larger */

  .col {
    display: flex 50%;
    flex-direction: row;
    /* flex-direction: column; */
    flex-wrap: wrap;
    flex-basis: 0;
    }
}

